--- a/NMA Admin/App.config
+++ b/NMA Admin/App.config
@@ -1,14 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="NMA_Admin.Properties.Settings.ConnectionString" connectionString="Data Source=xe;User ID=administrador;Password=admin123;Unicode=True"
-            providerName="System.Data.OracleClient" />
-        <add name="NMA_Admin.Properties.Settings.nmabd" connectionString="Data Source=xe;User ID=nma;Password=nma123;Unicode=True"
-            providerName="System.Data.OracleClient" />
-    </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-    </startup>
+  <configSections>
+    <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.21.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+  </configSections>
+  <connectionStrings>
+    <add name="NMA_Admin.Properties.Settings.ConnectionString" connectionString="Data Source=xe;User ID=administrador;Password=admin123;Unicode=True" providerName="System.Data.OracleClient" />
+    <add name="NMA_Admin.Properties.Settings.nmabd" connectionString="Data Source=xe;User ID=nma;Password=nma123;Unicode=True" providerName="System.Data.OracleClient" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client" />
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.21.1, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
